@@ -44,6 +44,9 @@ BUG FIXES
     o	Prediction of the seasonal component in HoltWinters() was one
 	step out at one point in the calculations.
 
+	decompose() incorrectly computed the 'random' component for a
+	multiplicative fit.
+
     o	density(1:20, bw="SJ") now works as bw.SJ() now tries a larger
 	search interval than the default (lower,upper).
 
